--- a/css/llcreations.css
+++ b/css/llcreations.css
@@ -22,7 +22,6 @@ h7 {
 .header {
     width: 100%;
     display: flex;
-    position: sticky;
     top: 0;
 }
 
@@ -59,7 +58,7 @@ h7 {
 }
 
 .header::before {
-    content: "";
+    content: " ";
     position: absolute;
     background-color: gray;
     width: 100%;
@@ -144,28 +143,8 @@ width: 18%;
 
 
 /* INTROLINE */
-.introline h2 {
-    margin: 2%;
-    display: inline;
-    position: relative;
-    animation: movement;
-    animation-duration: 10s;
-    animation-iteration-count: infinite;
-    animation-timing-function: ease-in-out;
-}
-
-@keyframes movement {
-    0% {
-        left: 0%;
-    }
-
-    50% {
-        left: 70%;
-    }
-
-    100% {
-        left: 0%;
-    }
+marquee{
+    padding: 3vh;
 }
 
 /* MID SECTION */
@@ -173,55 +152,23 @@ width: 18%;
     width: 90%;
     margin: auto;
     display: flex;
-    margin-top: 20px;
     margin-bottom: 20px;
-    border-radius: 34px;
     position: static;
-}
-
-.mid::before {
-    content: "";
-    position: absolute;
-    border: 4px solid white;
-    width: 90%;
-    height: 280px;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    background-image: url(../images/bg.jpg);
+    background-size: 89vw 70vh;
+    background-repeat: no-repeat;
     border-radius: 34px;
-    z-index: -1;
-    animation: glow;
-    animation-duration: 1ms;
-    animation-fill-mode: forwards;
-    animation-iteration-count: 1;
-    animation-timing-function: ease;
-    animation-delay: 1.5s;
+    color: white;
 }
 
-@keyframes glow {
-    from {
-        border: 4px solid white;
-    }
-
-    to {
-        border: 4px solid red;
-    }
-}
 
 .fpart {
     width: 47%;
-    margin: 2%;
-    height: 250px;
-    padding: 1%;
+    margin: 4%;
+    height: 50vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    position: relative;
-    animation-name: entry;
-    animation-duration: 2s;
-    animation-iteration-count: 1;
-    animation-fill-mode: forwards;
-    z-index: 221;
-    right: 100%;
 }
 
 
@@ -229,28 +176,14 @@ width: 18%;
 .spart {
     padding: 1%;
     width: 47%;
-    margin: 2%;
-    height: 250px;
+    margin: 4%;
+    height: 50vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    position: relative;
-    animation-name: lentry;
-    animation-duration: 2s;
-    animation-iteration-count: 1;
-    animation-fill-mode: forwards;
 }
 
-@keyframes lentry {
-    from {
-        left: 100%;
-    }
-
-    to {
-        left: 0%;
-    }
-}
 
 .subpart1 {
     width: 40%;
@@ -262,15 +195,6 @@ width: 18%;
     width: 70%;
 }
 
-@keyframes entry {
-    from {
-        right: 100%;
-    }
-
-    to {
-        right: 0%;
-    }
-}
 
 
 .subpart1 img {
@@ -306,30 +230,11 @@ width: 18%;
     transition: 1s;
 }
 
-.part1 img:hover{
-    transform:scale(2,2);
-}
-
-.container::before {
-    content: "";
-    position: absolute;
-    background-image: url('https://media.istockphoto.com/id/1286354786/vector/dark-prism-textured-abstract-background.jpg?s=612x612&w=0&k=20&c=lJiYScAyV7Iqn5FKdxMYCuntLO0ljQkR_oEftweNjmE=');
-    background-repeat:no-repeat;
-    background-size:cover;
-    height: 100%;
-    width: 97%;
-    z-index: -1;
-    opacity: 0.3;
-
-}
 
 
-.border{
-    border: 2px solid red;
-        margin: 1.5%;
-}
 /* LAST LINE */
 .copy {
+    width: 100%;
     background-color: black;
     font-size: 1.3rem;
     font-weight: bold;
