--- a/css/llcreationsphone.css
+++ b/css/llcreationsphone.css
@@ -17,13 +17,13 @@ h7 {
 
 /* HEADER SECTION */
 .header::before{
-    height: 100%;
+    height: 17vh;
 }
-.midhead img{
-    width: 100%;
+.midhead img{ 
+   width: 100%;
 }
 .right{
-    width:50%;
+    width:63%;
     flex-wrap:wrap;
 }
 
@@ -43,10 +43,13 @@ h7 {
 
 /* MID SECTION */
 .mid{
-    display: block;
+    flex-direction: column;
+    align-items: center;
     width: 90%;
     margin: auto;
     border: none;
+    background-image: none;
+    color: black;
 }
 
 .mid::before{
